--- a/TfsJsonOutput/App.config
+++ b/TfsJsonOutput/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
-    <add key="tfsServer" value="https://tfs.cegeka.com/tfs/hcsc" />
+    <add key="tfsServer" value="http://rl-tfsapp01:8080/tfs/DefaultCollection" />
   </appSettings>
   
 </configuration>
